--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-chauffeur",
   "description": "Configurable delivery tool for grunt build files and backend servers",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/joeytrapp/grunt-chauffeur",
   "author": {
     "name": "Joey Trapp",
@@ -40,7 +40,6 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "express": "~3.3.4",
-    "http-proxy": "~0.10.3"
+    "chauffeur": "~0.2.0"
   }
 }
