--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-chauffeur",
   "description": "Configurable delivery tool for grunt build files and backend servers",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "homepage": "https://github.com/joeytrapp/grunt-chauffeur",
   "author": {
     "name": "Joey Trapp",
@@ -37,9 +37,15 @@
     "grunt": "~0.4.1"
   },
   "keywords": [
-    "server", "development", "testing", "proxy", "express", "gruntplugin"
+    "server",
+    "development",
+    "testing",
+    "proxy",
+    "express",
+    "gruntplugin"
   ],
   "dependencies": {
-    "chauffeur": "~0.3.0"
+    "chauffeur": "~0.4.0",
+    "lockfile": "~0.4.0"
   }
 }
